style cop refactor for compatibility

--- a/ExperimentalProbability.Calculations/ExperimentalProbability.Calculations.csproj
+++ b/ExperimentalProbability.Calculations/ExperimentalProbability.Calculations.csproj
@@ -11,4 +11,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <PropertyGroup>
+	<CodeAnalysisRuleSet>..\.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
+
+
 </Project>
