--- a/ExperimentalProbability.UI/ExperimentalProbability.UI.csproj
+++ b/ExperimentalProbability.UI/ExperimentalProbability.UI.csproj
@@ -17,6 +17,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <PropertyGroup>
+	<CodeAnalysisRuleSet>..\.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\ExperimentalProbability.Calculations\ExperimentalProbability.Calculations.csproj" />
   </ItemGroup>
