--- a/ExperimentalProbability.Calculations/ExperimentalProbability.Calculations.csproj
+++ b/ExperimentalProbability.Calculations/ExperimentalProbability.Calculations.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +13,9 @@
 
   <PropertyGroup>
 	<CodeAnalysisRuleSet>..\.ruleset</CodeAnalysisRuleSet>
+	<ApplicationIcon />
+	<OutputType>Library</OutputType>
+	<StartupObject />
   </PropertyGroup>
 
 
