added contracts project to avoid circular project reference, localizable resources now available in both UI and Calculation projects

--- a/ExperimentalProbability.Calculations/ExperimentalProbability.Calculation.csproj
+++ b/ExperimentalProbability.Calculations/ExperimentalProbability.Calculation.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExperimentalProbability.Contracts\ExperimentalProbability.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
