PR: Third Project Part (#19)
* added dynamic  settings in UI, logic is not implemented, translation redone

* migration back to .NET Framework 4.6.1, because of system issues in our school.

* added controllers, dynamic settings in UI

* added dynamic  settings in UI, logic is not implemented, translation redone

* migration back to .NET Framework 4.6.1, because of system issues in our school.

* added controllers, dynamic settings in UI

* resource use in UI reworked

* added stylecop analyzers, refactor based on stylecop analyzers ruleset

* style cop refactor for compatibility

* stylecop ruleset updated

* added ui elements styles, ui refactor to use xceed toolkit ui elements

* another changes in UI logic, small bit of data parsing to colored balls calculation

* resource structure refactor

* misspell in resources corrected

* ui elements resources refactor

* elements resource refactor, mainly keys of the resources refactored

* hopefully a final resource structure refactor

* migration to .NET Framework 4.8 on UI project, migration to .NET Standart 2.0 on Calculations project

* UI Architecture redone

* Calculation on going changes

* style for error messages

* added contracts project to avoid circular project reference, localizable resources now available in both UI and Calculation projects

* calculation with dice reworked

* calculation now runs as a background operation

* needed refactor after moving localizable resources

* basic data displayer

* base for reworked coloredballs calculation

* removed for now not used icon

* coloredballs calculation finished, some refactor

--- a/ExperimentalProbability.UI/ExperimentalProbability.UI.csproj
+++ b/ExperimentalProbability.UI/ExperimentalProbability.UI.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <UseWPF>true</UseWPF>
     <StartupObject>ExperimentalProbability.UI.App</StartupObject>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -10,22 +10,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExperimentalProbability.Calculations\ExperimentalProbability.Calculations.csproj" />
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.2.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
+  <PropertyGroup>
+	<CodeAnalysisRuleSet>..\.ruleset</CodeAnalysisRuleSet>
+	<AssemblyName>ExperimentalProbability.UI</AssemblyName>
+	<ApplicationIcon></ApplicationIcon>
+	<Win32Resource />
+  </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <ProjectReference Include="..\ExperimentalProbability.Calculations\ExperimentalProbability.Calculation.csproj" />
+    <ProjectReference Include="..\ExperimentalProbability.Contracts\ExperimentalProbability.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
