--- a/ExperimentalProbability.Contracts/ExperimentalProbability.Contracts.csproj
+++ b/ExperimentalProbability.Contracts/ExperimentalProbability.Contracts.csproj
@@ -41,7 +41,7 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Update="Properties\Resources\Calculations\TwoDPlane\QuarterCircle\Resources.Designer.cs">
+    <Compile Update="Properties\Resources\Calculations\TwoDPlane\Pi\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -99,7 +99,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\QuarterCircle\Resources.resx">
+    <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\Pi\Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
