--- a/ExperimentalProbability.Contracts/ExperimentalProbability.Contracts.csproj
+++ b/ExperimentalProbability.Contracts/ExperimentalProbability.Contracts.csproj
@@ -36,6 +36,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Update="Properties\Resources\Calculations\TwoDPlane\Area\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Resources\Calculations\TwoDPlane\General\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -94,6 +99,10 @@
     <EmbeddedResource Update="Properties\Resources\Calculations\Pool\General\Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\Area\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\General\Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
