Feature/calculation for definite integral (#23)
* czech names of calculations updated

* quartercircle calc renamed to pi calc

* refactored class names in ui

* validators refactor

* renamed quartercircle calc to pi calc in calculations

* pi calc resources refactor

* quartercircle calc namespace refactor in ui

* refactored twodplane ui resources and base logic

* refactored pool ui resources and base logic, removed old pi calc ui

* new twodplane calculation for calculating the approximate area of a function

--- a/ExperimentalProbability.Contracts/ExperimentalProbability.Contracts.csproj
+++ b/ExperimentalProbability.Contracts/ExperimentalProbability.Contracts.csproj
@@ -36,12 +36,17 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Update="Properties\Resources\Calculations\TwoDPlane\Area\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Update="Properties\Resources\Calculations\TwoDPlane\General\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Update="Properties\Resources\Calculations\TwoDPlane\QuarterCircle\Resources.Designer.cs">
+    <Compile Update="Properties\Resources\Calculations\TwoDPlane\Pi\Resources.Designer.cs">
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -95,11 +100,15 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\Area\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\General\Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\QuarterCircle\Resources.resx">
+    <EmbeddedResource Update="Properties\Resources\Calculations\TwoDPlane\Pi\Resources.resx">
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
